# loft-compiler

./: CMakeLists.txt
examples/: ex1.lft
src/: ast.h  main.cpp
src/ast/: ast.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.h
